# rust-constraint

./: Cargo.toml  README.md
src/: constraint.rs  domain.rs  lib.rs  problem.rs  variable.rs
